# taka-score

./: .env.example  .gitignore  Dockerfile  Style_Technical_Evaluator_MCP_Architecture.md  manifest.json  mcp-client-config.json  pyproject.toml
taka_score/: __main__.py  api_server.py  db.py  dialogue_detector.py  mcp_server.py  preprocessor.py  report_generator.py  scorer.py  server.py  splitter.py  tokenizer.py
taka_score/analyzers/: __init__.py  cohesion.py  lexical_diversity.py  readability.py  repetition.py  sentence_rhythm.py  structure_pattern.py
taka_score/resources/: connectors_vi.txt
taka_score/schemas/: __init__.py  request.py  response.py
tests/: test_integration.py  test_preprocessor.py  test_splitter.py
tests/fixtures/: sample_chapter.txt
