[project]
name = "taka-score"
version = "0.1.0"
description = "MCP server for evaluating Vietnamese novel writing style and technical quality."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "underthesea>=6.8.4",
]

[project.scripts]
taka-score = "taka_score.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taka_score"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
